<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_controllers</name>
  <version>0.0.1</version>
  <description>Controllers for the Robotiq gripper.</description>
  <maintainer email="alex.moriarty@picknik.ai">Alex Moriarty</maintainer>
  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasmussen</maintainer>
  <license>BSD 3-Clause</license>
  <author>Cory Crean</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
