<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_driver</name>
  <version>0.0.0</version>
  <description>ROS2 driver package for the Robotiq gripper.</description>
  <author>Cory Crean</author>
  <maintainer email="alex.moriarty@picknik.ai">Alex Moriarty</maintainer>
  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasumessen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>serial</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
